Closed Bug 1048242 Opened 11 years ago Closed 11 years ago

Fix more bad implicit constructors in docshell

Categories

(Core :: DOM: Navigation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → ehsan
Blocks: explicit
Attachment #8467032 - Flags: review?(bugs)
Comment on attachment 8467032 [details] [diff] [review] Fix more bad implicit constructors in docshell So are you planning to prevent all use of non-explicit ctors?
Attachment #8467032 - Flags: review?(bugs) → review+
(In reply to Olli Pettay [:smaug] from comment #2) > Comment on attachment 8467032 [details] [diff] [review] > Fix more bad implicit constructors in docshell > > So are you planning to prevent all use of non-explicit ctors? No, that's what MOZ_IMPLICIT is used for.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: