Bug 1048242 - Fix more bad implicit constructors in docshell; r=smaug